#object-panel change to .object-panel

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -271,7 +271,7 @@
             </div>
         </form>
         <form>
-            <div id="simri-option-panel" class="panel object-panel" style="display:none;">
+            <div id="simri-result-panel" class="panel object-panel" style="display:none;">
                 <div class="panel-body" style="padding:10px;">
                         <div id="simri-panel-end-image">
                             <input id="image_file2" type="file" name="image_file" size="30" style="display:inline-flex;margin-left:120px;margin-top:120px"
