--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -230,7 +230,7 @@
                         <span class="header-span">배경바꾸기</span>
                     </li>
                     <li class="header-item" style="display:inline-flex;" onclick="switchEditorMode()">
-                        <span class="header-span">미리보기</span>
+                        <span id="editor-mode" class="header-span">미리보기</span>
                     </li>
                     <li class="header-item" style="display:inline-flex;" onclick="getThumbnailPopup()">
                         <span class="header-span">저장</span>
