--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -67,7 +67,6 @@
         /*box-shadow: 0px 2px 5px #666;*/
         z-index: 1;
         background:rgba(0,0,0,0);
-        
     }
     
     .panel-floating {
@@ -199,6 +198,16 @@
         background-size: 100% 100%;
         background-image: url('../static/img/btn_spot_on_blue.png')
     }
+
+    #hidenseek-clock{
+        background-size: 100% 100%;
+        background-image: url(../static/img/template/icon_time_final.png);
+        z-index: 1;
+        position: fixed;
+        width: 200px;
+        height: 200px;
+        right: 10px;
+    }
     /*
   .modal-content{
     background-size: 100% 100%;
@@ -222,7 +231,7 @@
                         </ul>
                     </li>
                     <li>
-                        <div id="scene-list"></div>
+                        <div id="scene-list" style="margin-top: 14px;"></div>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right" style="text-align:center;">
@@ -246,6 +255,7 @@
         <div id="floating-panel" style="display:none;">
             <div id="newImage" class="panel-floating" onclick="getImagePopup()"></div>
             <% if (projectType == "free") { %>
+            <div id="newScene" class="panel-floating" onclick="createScene()"></div>
             <% } %>
             <% if (projectType == "simri") { %>
             <div id="newChoice" class="panel-floating" onclick="createOption()"></div>
@@ -325,7 +335,10 @@
                 </div>
             </div>
         </form>
-                
+        <div id="hidenseek-clock">
+            <div id="hidenseek-count"style="margin-top: 80px;margin-left: 100px;">0</div>
+            <div id="hidenseek-num"style="margin-top: 18px;margin-left: 100px;">0/0</div>
+        </div>        
         <div id="main-canvas" class="col-md-8" style="height:100%;">
             <iframe id="main_scene" class="main_scene" width="100%" height="100%" allowfullscreen="yes" scrolling="no" allowvr="yes" src="../static/html/canvas.html"></iframe>
         </div>
