--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -24,7 +24,7 @@
     }
 
     #remove-button{
-        margin-top: 59px;
+        margin-top: 58px;
         margin-right: 28px;
         width: 100px;
         height: 30px;
@@ -190,6 +190,15 @@
         background-size: 100% 100%;
         background-image: url('../static/img/btn_spot_on_blue.png')
     }
+    .image-upload > input{
+        display: none;
+    }
+
+    .image-upload img{
+      width:70px;
+      height:30px;
+      cursor: pointer;
+    }
     /*
   .modal-content{
     background-size: 100% 100%;
@@ -253,8 +262,14 @@
             <form action="/project/<%= sceneID %>/simri" id="simri-option-form" method="post" enctype="multipart/form-data" target="uploader_iframe">
                 <div class="panel-body" style="padding:10px;">
                         <div id="simri-panel-image">
-                            <input id="simri-option-file" name="image_file" type="file" size="30" style="display:inline-flex;margin-left:120px;margin-top:120px"/>
-                            <input type="text" id="simri-option-score" style="margin-top: 17px;margin-left: 120px;width: 40%;">
+                            <!--<input id="simri-option-file" name="image_file" type="file" size="30" style="display:inline-flex;margin-left:120px;margin-top:120px" accept="image/*"/>-->
+                            <div class="image-upload" style="display:inline-flex;margin-left:160px;margin-top:115px">
+                              <label for="simri-option-file">
+                                  <img src="../static/img/editor_option_upload_btn.png"/>
+                              </label>
+                              <input id="simri-option-file" name="image_file" type="file"/>
+                            </div>
+                            <input type="text" id="simri-option-score" style="margin-top: 6px;margin-left: 120px;width: 40%;">
                             <input type="text" id="simri-option-text" style="left: 120px;bottom: 153px;position: absolute;width: 40%;">
                             <div id="remove-button" class="panel panel-default panel-floating" onclick="removeSelectedObject()">
                                 <div class="panel-body panel-floating-inside">
@@ -431,7 +446,8 @@ $(document).ready(function() {
       $("#uploader_iframe").unbind().on('load', function() { // This block of code will execute when the response is sent from the server.
           result = JSON.parse($(this).contents().text()); // Content of the iframe will be the response sent from the server. Parse the response as the JSON object
           modifyOption($("#simri-option-text").val(), result.result, $("#simri-option-score").val());
-          resetSimriOptionForm();
+          //resetSimriOptionForm();
+          $("#simri-option-panel").css("display", "none");
       });
     });
 
