--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -322,7 +322,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Image</h4>
+                    <h4 id="image-modal-title" class="modal-title"style="text-align:center;">Image</h4>
                 </div>
                 <div class="modal-body">
                     <fieldset>
@@ -511,12 +511,14 @@ function getJson() {
 }
 
 function getBackgroundPopup() {
+    $("#image-modal-title").text("배경이미지 업로드");
     nothumbnail = true;
     imageFlag = FLAG_BACKGROUND;
     $('#imageModal').modal('show');
 }
 
 function getImagePopup() {
+    $("#image-modal-title").text("이미지 업로드");
     imageFlag = FLAG_IMAGE;
     $('#imageModal').modal('show');
 }
