--- a/views/project.ejs
+++ b/views/project.ejs
@@ -21,7 +21,8 @@
         </ul>
         </div>
         <div style="margin-right:30px;float:right;">
-          <a href="#" class="hasIcon shortcode_button btn_normal btn_type5" onclick="selectTemplate()"><i class="icon-star-o"></i>New Project</a>
+          <a href="#" class="hasIcon shortcode_button btn_normal btn_type5" onclick="selectTemplate()" style="background-color:#109DEF
+"><i class="icon-star-o"></i>New Project</a>
         </div>
       </div>
         <% if(scenes.length > 0){ %>
@@ -109,21 +110,59 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">템플릿을 선택하세요</h4>
             </div>
-            <div class="modal-body">
-                <a href="/project/new?type=free" onClick="return newProject();">
-                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="100">
-                    <h6><a href="#">자유모드</a></h6>
-                </a>
-                <a href="/project/new?type=simri" onClick="return newProject();">
-                    <img src="https://unsplash.it/300/300/?random" alt="" class="fw_featured_image" width="100">
-                    <h6><a href="#">심리테스트</a></h6>
-                </a>
-                <a href="/project/new?type=hidenseek" onClick="return newProject();">
-                    <img src="https://unsplash.it/300/301/?random" alt="" class="fw_featured_image" width="100">
-                    <h6><a href="#">숨은그림찾기</a></h6>
-                </a>
-            </div>
-            <div class="modal-footer">
+            <div class="modal-body" style="padding-top:0px;">
+							<div style="display:inline-flex;padding-top: 15px;">
+								<div style="margin-right:10px;">
+									<a href="/project/new?type=free" onClick="return newProject();">
+	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
+	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>자유모드</strong></a></h6>
+	                </a>
+								</div>
+								<div style="margin-right:10px;">
+									<a href="/project/new?type=simri" onClick="return newProject();">
+	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
+	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>심리테스트</strong></a></h6>
+	                </a>
+								</div>
+								<div style="margin-right:10px;">
+									<a href="/project/new?type=hidenseek" onClick="return newProject();">
+	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
+	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>숨은그림찾기</strong></a></h6>
+	                </a>
+								</div>
+								<div>
+									<a href="/project/new?type=??" onClick="return newProject();">
+	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
+	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>??</strong></a></h6>
+	                </a>
+								</div>
+							</div>
+							<div style="display:inline-flex;padding-top: 15px;">
+								<div style="margin-right:10px;">
+									<a href="/project/new?type=??" onClick="return newProject();">
+	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
+	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>??</strong></a></h6>
+	                </a>
+								</div>
+								<div style="margin-right:10px;">
+									<a href="/project/new?type=??" onClick="return newProject();">
+	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
+	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>??</strong></a></h6>
+	                </a>
+								</div>
+								<div style="margin-right:10px;">
+									<a href="/project/new?type=??" onClick="return newProject();">
+	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
+	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>??</strong></a></h6>
+	                </a>
+								</div>
+								<div>
+									<a href="/project/new?type=??" onClick="return newProject();">
+	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
+	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>??</strong></a></h6>
+	                </a>
+								</div>
+							</div>
             </div>
         </div>
     </div>
