not always load image popup

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -487,11 +487,10 @@ function openMenu() {
 }
 
 function getJson() {
-    <% if (projectType == "free") { %>
+    if(!loadProject('<%-JSON.stringify(projectObjectJson) %>')){
         getBackgroundPopup();
-    <% } %>
+    }
     nothumbnail = true;
-    loadProject('<%-JSON.stringify(projectObjectJson) %>')
 }
 
 function getBackgroundPopup() {
