--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -19,8 +19,8 @@
         height: 25px;
         float: left;
         position: absolute;
-        top: 27px;
-        right: 25px;
+        top: 28px;
+        right: 35px;
         background-size: 100% 100%;
         background-position: center;
         background-repeat: no-repeat;
@@ -29,8 +29,36 @@
     }
 
     #remove-button{
-        top: 27px;
-        right: 53px;
+        top: 28px;
+        right: 70px;
+        width: 25px;
+        height: 25px;
+        float: right;
+        position: absolute;
+        background-size: 100% 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-image: url(../static/img/delete_icon.png);
+        border-color: #ffffff;
+    }
+
+    #hidden-adjust-button{
+        width: 25px;
+        height: 25px;
+        float: left;
+        position: absolute;
+        top: 48px;
+        right: 35px;
+        background-size: 100% 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-image: url(../static/img/adjust_icon.png);
+        border-color: #ffffff;
+    }
+
+    #hidden-remove-button{
+        top: 48px;
+        right: 70px;
         width: 25px;
         height: 25px;
         float: right;
@@ -289,8 +317,12 @@
             <div id="simri-result-panel" class="panel object-panel" style="display:none;">
                 <div class="panel-body" style="padding:10px;">
                         <div id="simri-panel-end-image">
-                            <input id="result-image-file" type="file" name="image_file" size="30" style="display:inline-flex;margin-left:120px;margin-top:120px"
-                                disabled="true" />
+                          <div class="image-upload" style="display:inline-flex;margin-left:160px;margin-top:115px">
+                            <label for="simri-image-file">
+                                <img src="../static/img/editor_option_upload_btn.png"/>
+                            </label>
+                            <input id="simri-image-file" name="image_file" type="file"/>
+                          </div>
                             <input type="text" style="margin-top: 17px;margin-left: 120px;width: 40%;">
                             <input type="text" style="left: 120px;bottom: 153px;position: absolute;width: 40%;">
                             <input id="result-back-file" type="file" name="image_file" size="30" style="display:inline-flex;margin-left:120px;margin-top:20px"
@@ -313,16 +345,24 @@
             <div id="hidenseek-panel" class="panel object-panel" style="display:none;">
                 <div class="panel-body" style="padding:10px;">
                         <div id="hidenseek-panel-image">
-                            <input id="hidenseek-image-file" type="file" name="image_file" size="30" style="display:inline-flex;margin-left:120px;margin-top:80px"
-                                disabled="true" />
-                            <input id="hidenseek-sound-file" type="file" name="image_file" size="30" style="display:inline-flex;margin-left:120px;margin-top:55px"
-                                disabled="true" />
-                            <div id="remove-button" class="panel-default panel-floating" onclick="removeSelectedObject()" style="margin-top:21">
+                          <div class="image-upload" style="display:inline-flex;margin-left:160px;margin-top:110px">
+                            <label for="hidenseek-image-file">
+                                <img src="../static/img/editor_option_upload_btn.png"/>
+                            </label>
+                            <input id="hidenseek-image-file" name="image_file" type="file"/>
+                          </div>
+                          <div class="image-upload" style="display:inline-flex;margin-left:160px;margin-top:20px">
+                            <label for="hidenseek-sound-file">
+                                <img src="../static/img/editor_option_upload_btn.png"/>
+                            </label>
+                            <input id="hidenseek-sound-file" name="image_file" type="file"/>
+                          </div>
+                            <div id="hidden-remove-button" class="panel-default panel-floating" onclick="removeSelectedObject()" style="margin-top:21">
                                 <div class="panel-body panel-floating-inside">
                                     <span></span>
                                 </div>
                             </div>
-                            <div id="adjust-button" class="panel-default panel-floating" onclick="removeSelectedObject()">
+                            <div id="hidden-adjust-button" class="panel-default panel-floating" onclick="removeSelectedObject()">
                                 <div class="panel-body panel-floating-inside">
                                     <span></span>
                                 </div>
@@ -334,7 +374,7 @@
         <div id="hidenseek-clock" style="display:none">
             <div id="hidenseek-count" style="margin-top: 65px;margin-left: 100px;font-size: 35px">0</div>
             <div id="hidenseek-num" style="margin-top: 4px;margin-left: 100px;">0/0</div>
-        </div>        
+        </div>
         <div id="main-canvas" class="col-md-8" style="height:100%;">
             <iframe id="main_scene" class="main_scene" width="100%" height="100%" allowfullscreen="yes" scrolling="no" allowvr="yes" src="../static/html/canvas.html"></iframe>
         </div>
