--- a/views/project.ejs
+++ b/views/project.ejs
@@ -108,56 +108,48 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">템플릿을 선택하세요</h4>
             </div>
-            <div class="modal-body" style="padding-top:0px;">
-							<div style="display:inline-flex;padding-top: 15px;">
-								<div style="margin-right:10px;">
+            <div class="modal-body" style="padding:0px;">
+							<div style="display:inline-flex">
+								<div style="margin-right:5px;">
 									<a href="/project/new?type=free" onClick="return newProject();">
-	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
-	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>자유모드</strong></a></h6>
+	                    <img src="../static/img/thumbnail_free.png" alt="" class="fw_featured_image" width="145">
 	                </a>
 								</div>
-								<div style="margin-right:10px;">
+								<div style=";">
 									<a href="/project/new?type=simri" onClick="return newProject();">
-	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
-	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>심리테스트</strong></a></h6>
+	                    <img src="../static/img/thumbnail_simri.png" alt="" class="fw_featured_image" width="145">
 	                </a>
 								</div>
-								<div style="margin-right:10px;">
+								<div style="margin-right:5px;">
 									<a href="/project/new?type=hidenseek" onClick="return newProject();">
-	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
-	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>숨은그림찾기</strong></a></h6>
+	                    <img src="../static/img/thumbnail_hiddenseek.png" alt="" class="fw_featured_image" width="145">
 	                </a>
 								</div>
 								<div>
 									<a href="/project/new?type=??" onClick="return newProject();">
-	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
-	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>??</strong></a></h6>
+	                    <img src="../static/img/thumbnail_gallery.png" alt="" class="fw_featured_image" width="145">
 	                </a>
 								</div>
 							</div>
-							<div style="display:inline-flex;padding-top: 15px;">
-								<div style="margin-right:10px;">
+							<div style="display:inline-flex;margin-bottom:10px;">
+								<div style="margin-right:5px;">
 									<a href="/project/new?type=??" onClick="return newProject();">
-	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
-	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>??</strong></a></h6>
+	                    <img src="../static/img/thumbnail_room.png" alt="" class="fw_featured_image" width="145">
 	                </a>
 								</div>
-								<div style="margin-right:10px;">
+								<div style="margin-right:5px;">
 									<a href="/project/new?type=??" onClick="return newProject();">
-	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
-	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>??</strong></a></h6>
+	                    <img src="../static/img/thumbnail_soon.png" alt="" class="fw_featured_image" width="145">
 	                </a>
 								</div>
-								<div style="margin-right:10px;">
+								<div style="margin-right:5px;">
 									<a href="/project/new?type=??" onClick="return newProject();">
-	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
-	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>??</strong></a></h6>
+	                    <img src="../static/img/thumbnail_soon.png" alt="" class="fw_featured_image" width="145">
 	                </a>
 								</div>
 								<div>
 									<a href="/project/new?type=??" onClick="return newProject();">
-	                    <img src="https://unsplash.it/301/300/?random" alt="" class="fw_featured_image" width="133">
-	                    <h6 style="margin-top:10px;margin-bottom:0px;"><a href="#"><strong>??</strong></a></h6>
+	                    <img src="../static/img/thumbnail_soon.png" alt="" class="fw_featured_image" width="145">
 	                </a>
 								</div>
 							</div>
